# ImageDeduplication

./: .gitignore  README.md  install.sh  pyproject.toml
dedupImg/: __init__.py
dedupImg/scripts/: dedupCli.py
dedupImg/tools/: __init__.py
dedupImg/utils/: deduplication.py
imageDeduplication/: __init__.py  config.py
imageDeduplication/scripts/: dedupCli.py
imageDeduplication/tools/: __init__.py  imageFingerprint.py
imageDeduplication/utils/: deduplication.py
