[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]

name = "dedupImg"
dynamic = ["version"]
description = "图像去重工具包."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "prettytable", "imagehash", "Pillow", "tqdm", "numpy", "loguru"
]


[tool.setuptools.dynamic]
version = { attr = "dedupImg.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["dedupImg", "dedupImg.*"]

[project.scripts]
# 命令 = "包名.模块:函数"
dedupImg = "dedupImg.scripts.dedupCli:dedupImgCli"
